# Drawing-Robot

./: CMakeLists.txt  README.md  RTET-Team17_DrawingRobot.md  cal_limitArea.mlx  motor_test.cpp  testmotor
SequenceDiagram/: DrawingRobot.asta
Tool/: CppThread.h  MotorThread.h  Test  Test.cpp  data.txt  ex2_2  ex2_2.cpp  newData.txt  pid_example.cpp  until.cpp
Web/: blink.c  photos.html  server.c
Web/WebIOPi-0.7.1/python/native/: cpuinfo.c
Web/css/: background.css  button.css  camera.css  circleLight.css  common.css  intro.css  menuCtr.css  mobile.css  profile.css
Web/js/: camera.js  menuCtr.js  router.js  script.js
Web/page/: back.html  camera.html  cameras.html  circle.html  components.html  draw.html  index.html  intro.html  menuBar.html  moblie.html  moveCtrl.php  photoRec.php  profile.html  profile.php  socket.php  test.html  test.php  uploadheadimg.php
dataTest/: ttttt.txt
include/: CMakeLists.txt  PiMotor.h  Test.h  calPosition.h  controlMotor.h  dataTest.h  define.h  movetoTarget.h  pixtoMeter.h  processImages.h  reDecoder.h  rotary_encoder.hpp  util.h
socket/: client.php  cmain  cmain.cpp  index.php  server  server.cpp
src/: PiMotor.cpp  Test  Test.cpp  controlMotor.cpp  data.txt  mainTest.cpp  motor  movetoTarget.cpp  pid.cpp  pid.py  pid_motor.cpp  pixtoMeter.cpp  processImages.cpp  reDecoder.cpp  rot_enc_cpp  rotary_encoder.cpp  test.py  test_rotary_encoder.cpp
src/CJM/: calPosition.cpp  coordinateSystem.cpp
src/CJM/include/: calPosition.h  movetoTarget.h  processImages.h
src/CJM/src/: calPosition.cpp  mainTest  mainTest.cpp  movetoTarget.cpp  processImage.cpp  processImages.cpp
~/.vscode-root/: Cookies  Network Persistent State  TransportSecurity  machineid  storage.json
~/.vscode-root/Backups/: workspaces.json
~/.vscode-root/Cache/: 625bbe30771f2f39_0  b5bbe329b0f7360c_0  c85687354a0e770a_0  cbc42e4c979f69f0_0
~/.vscode-root/Cache/index-dir/: the-real-index
~/.vscode-root/CachedData/3c4e3df9e89829dce27b7b5c24508306b151f30d/: AvailabilityData-08974bad3feaf81be286b7c52344fccb.code  Base-b76ed57a9d3dd87a09d7928595519f7b.code  Channel-551bf1ec8e3694f2712619a04a69a8ad.code  Config-a36c5d40deb13f7db845da245ec3d040.code  Console-74c0039962d446129a1d7d06a68bafdd.code  Constants-771addc1e799de3fb1ba26efac1d1bcf.code  Context-9be40a09c3f76aad387c5f5d1f08bb8e.code  ContextTagKeys-60071bc546ba86f8e642959cee430e2a.code  CorrelationContextManager-8726a283ad44841c06469c923947a4c2.code  CorrelationIdManager-021ff505b507dfc3004b24ad0c31b0c6.code  Data-08c6efefbcf6a9e0784d62b53f0a4a6d.code  DataPoint-d610314e498b04d12c53bd9d33e219d5.code  DataPointType-8448da08132a4f52e98830da84f72255.code  Domain-5a3d37f428aca5f53fef83a7623069d7.code  Envelope-0ec2703829dc6fd06dc0b9b038838698.code  EnvelopeFactory-5b0573ab9cfa693ef1e6a4e97cc31455.code  EventData-311c20c48e83c98daf85af16ac175444.code  ExceptionData-8e89b223c2d04f42c5fbad4a7e7720c7.code  ExceptionDetails-61b599d61ad7648d99b7d152e4c0fe05.code  Exceptions-9a30c48671ac376b58824405a3b2b603.code  HttpDependencies-2f66bff9ed9fb6744720d34bec01685d.code  HttpDependencyParser-bd81f90df8c8810788d88d33b7fa93c2.code  HttpRequestParser-41658e4938c115f7a3105f77aaf0e76d.code  HttpRequests-f33360e25c63fb98621987fd6e26f967.code  Logging-98022e283a182fab1a54452b4a02f582.code  MessageData-a445b9aa2dcc79ed65fa4bf2f148a1bc.code  MetricData-8b4f244b2a6a714d9a7ab9ae5c182f41.code  (+163 more)
~/.vscode-root/CachedExtensions/: builtin  user
~/.vscode-root/Crash Reports/: client_id
~/.vscode-root/GPUCache/: data_1  index
~/.vscode-root/exthost Crash Reports/: client_id
(+8 files in other folders)
